--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "chokidar": "^3.5.2",
+    "drag-drop": "^7.2.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "fs-extra": "^10.0.0",
+    "open": "^8.2.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.58",
