--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chokidar": "^3.5.2",
     "electron-squirrel-startup": "^1.0.0",
     "fs-extra": "^10.0.0",
+    "jimp": "^0.16.1",
     "open": "^8.2.1"
   },
   "devDependencies": {
