--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dup-image",
   "productName": "dup-image",
-  "version": "1.0.0",
-  "description": "My Electron application description",
+  "version": "0.0.0",
+  "description": "A desktop application for finding similar photos to help organize your photo library.",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
